<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:others="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".forDetailUser"
    android:background="@color/graylight"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/main_details"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            others:civ_border_color="@android:color/darker_gray"
            others:civ_border_width="2dp"
            android:id="@+id/tv_onavatar_detail"/>
        <TextView
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_onNama_detail"
            android:text="@string/this_name"
            android:ellipsize="end"
            android:layout_marginTop="21dp"
            android:layout_marginStart="0dp"/>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_username"
                android:textSize="13sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="10dp"
                android:text="@string/this_username"
                android:textStyle="bold"
                android:id="@+id/tv_onUsername_detail"
                android:textSize="13sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_company"
                android:textSize="13sp"/>
            <TextView
                android:layout_marginStart="3dp"
                android:layout_marginEnd="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_company"
                android:textSize="13sp"
                android:textStyle="bold"
                android:id="@+id/tv_onCompany_detail"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_location"
                android:textSize="13sp"/>
            <TextView
                android:layout_marginStart="3dp"
                android:layout_marginEnd="0dp"
                android:text="@string/this_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textStyle="bold"
                android:id="@+id/tv_onLocation_detail"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/main_details"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repositories"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/tv_onRepository_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:textStyle="bold"
                android:text="@string/this_repository"
                android:textColor="@color/startred" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_following"
                android:textSize="15sp"/>
            <TextView
                android:text="@string/this_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_onfollowing_detail"
                android:paddingTop="3dp"
                android:textColor="@color/startred"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_follower"
                android:textSize="15sp"/>
            <TextView
                android:text="@string/this_follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_onfollower_detail"
                android:paddingTop="2dp"
                android:textStyle="bold"
                android:textColor="@color/startred"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>