<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    xmlns:others="http://schemas.android.com/apk/res-auto"
    android:padding="12dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        others:civ_border_color="@android:color/darker_gray"
        others:civ_border_width="3dp"
        android:layout_marginStart="8dp"
        android:id="@+id/img_item_avatar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="92dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/this_name"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_company"
            android:text="@string/this_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_marginTop="8dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginStart="15dp"
            android:text="@string/this_location"
            android:maxLines="2"
            android:layout_marginTop="8dp"
            android:id="@+id/tv_location"/>
    </LinearLayout>
</RelativeLayout>